# Fetch-Freight-WarehouseCoop-Gazebo

./: CMakeLists.txt  README.md  package.xml
backup/: fetch1.csv  fetch2.csv  fetch3.csv  freight1.csv  freight2.csv  navigation_robot2.py  warehouse.pgm
config/: fetch_controller.yaml  fetch_controllers.yaml  freight_controllers.yaml  robot1_controller.yaml
launch/: base_and_arm.launch  demo.launch  fetch_nav_test.launch  freight_nav.launch  my_mesh.launch  process_control.launch  process_control_test.launch  robot_move_arm.launch  robot_nav.launch  simulation.launch  teleop_keyboard.launch  test.launch  test_movebase.launch
maps/: warehouse.yaml
robots/: fetch.gazebo.xacro  fetch.urdf  freight.gazebo.xacro  freight.urdf  pr2.urdf  test.urdf
rviz/: 3Fe2Fr.rviz  4Fe3Fr.rviz  default.rviz
script/: create_world.py  fetch_arm_initialization.py  fetch_main_control.py  freightmove.py  move_arm.py  navigation_demo.py  navigation_fetch.py  navigation_freight.py  navigation_robot1.py  navigation_robot2.py  navigation_robot3.py  navigation_robot4.py  parseCSVstring.py  pgm.py  prepare_robot_fetch.py  process_control.py  process_control_test.py  robot_odom_pub.py  robot_odom_pun.py  sample_racklocation.csv  task_allocation.py  test.py  testcode.py  warehouse.pgm  warehouse.yaml
srv/: GetGoal.srv  GetGripperGoal.srv
testdata/: .~lock.fetch1.csv#  .~lock.freight2.csv#  .~lock.sample_racklocation.csv#  distance.csv  fetch1.csv  fetch2.csv  fetch3.csv  fetch4.csv  freight1.csv  freight2.csv  freight3.csv  picker_slot_x.csv  picker_slot_y.csv  sample_racklocation.csv  (+4 more)
(+38 files in other folders)
